api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      labels:
        components: api
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name:  api-data
              mountPath: /opt/app/uploads
              subPath: api
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
      volumes:
        - name:  api-data
          persistentVolumeClaim:
            claimName: pvc-api
