api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  selector:
    components: api
  type: ClusterIP
  ports:
  - port:  3000
    protocol: TCP
