app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  selector:
    components: front
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
